<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>KnightLauncher</groupId>
  <artifactId>KnightLauncher</artifactId>
  <version>1.7.0</version>
  <name>KnightLauncher</name>
  <description>Open source game launcher for Spiral Knights.</description>

  <dependencies>

    <dependency>
      <groupId>com.github.vatbub</groupId>
      <artifactId>mslinks</artifactId>
      <version>1.0.5</version>
    </dependency>

    <dependency>
      <groupId>net.lingala.zip4j</groupId>
      <artifactId>zip4j</artifactId>
      <version>2.9.1</version>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20180813</version>
    </dependency>

    <dependency>
      <groupId>com.github.jiconfont</groupId>
      <artifactId>jiconfont-swing</artifactId>
      <version>1.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.github.jiconfont</groupId>
      <artifactId>jiconfont-font_awesome</artifactId>
      <version>4.7.0.1</version>
    </dependency>

    <dependency>
      <groupId>com.samskivert</groupId>
      <artifactId>samskivert</artifactId>
      <version>1.9</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>